<resources>
    <string name="app_name">ProjetoLogin</string>
    <!-- TITULOS ACTIVITY -->
    <string name="TituloLoginActivity">Tela de Login</string>
    <string name="TituloCadastroActivity">Tela de Cadastro</string>
    <string name="TituloPerfilActivity">Perfil do Usuario</string>
    <!---->
    <string name="TituloListPosts">Lista dos Posts</string>
    <string name="TituloListComments">Lista dos Comentários</string>
    <string name="TituloListAlbuns">Lista de Albuns</string>
    <string name="TituloListPhotos">Lista de Photos</string>
    <string name="TituloListTodos">Lista de Todos</string>
    <string name="TituloListUsers">Lista de Usuarios</string>
    <!-- BOTOES -->
    <string name="btnEntrar">Entrar</string>
    <string name="btnCadastro">Cadastrar</string>
    <string name="btnListPosts">Lista de Posts</string>
    <string name="btnListComments">Lista de Comments</string>
    <string name="btnListAlbuns">Lista de Albuns</string>
    <string name="btnListPhotos">Lista de Photos</string>
    <string name="btnListTodos">Lista de Todos</string>
    <string name="btnListUsers">Lista de Users</string>
    <!-- TEXTVIEWS -->
    <string name="tvIdUserPerfil">ID_USER</string>
    <string name="tvNomeUserPerfil">NOME_USUARIO</string>
    <string name="tvLoginUserPerfil">LOGIN_USER</string>

    <string name="tvIdPostList">ID_POSTS</string>
    <string name="tvTituloPost">TITULO_POST</string>
    <string name="tvBodyPost">BODY_POST</string>
    <!-- HINT -->
    <string name="nome">Nome</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
</resources>